--- a/index.html
+++ b/index.html
@@ -31,7 +31,34 @@
           <a href="#about" class="link">My About</a>
         </div>
       </section>
-      <section id="about"></section>
+      <section id="about">
+        <div>
+          <h1 class="title">About Me</h1>
+          <div class="details">
+            <h1 class="title">Everything you can imagine is real</h1>
+            <p class="text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe
+              autem placeat tempore modi sed natus accusantium repellendus,
+              blanditiis odio quia eius at veniam.
+            </p>
+          </div>
+        </div>
+        <div>
+          <h1 class="title">Culture</h1>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
+            voluptatibus eius unde dolore harum sequi dignissimos, fugiat
+            distinctio. Ab, eligendi debitis? Enim a aliquid, perferendis in
+            accusamus itaque dolorum officiis voluptatibus omnis!
+          </p>
+          <ul class="social_media">
+            <li class="list"><a href="#" class="link"></a></li>
+            <li class="list"><a href="#" class="link"></a></li>
+            <li class="list"><a href="#" class="link"></a></li>
+            <li class="list"><a href="#" class="link"></a></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <script src="script.js"></script>
   </body>
