--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </section>
       <section id="about">
-        <div>
+        <div style="grid-area: 1 / 1 / 2 / 4">
           <h1 class="title">About Me</h1>
           <div class="details">
             <h1 class="title">Everything you can imagine is real</h1>
@@ -43,7 +43,7 @@
             </p>
           </div>
         </div>
-        <div>
+        <div style="grid-area: 1 / 4 / 2 / 6">
           <h1 class="title">Culture</h1>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
@@ -59,6 +59,31 @@
           </ul>
         </div>
       </section>
+      <section id="information">
+        <ul class="info">
+          <li class="list">
+            <span class="icon">x</span>
+            <h4 class="title">Mobile Design</h4>
+          </li>
+          <li class="list">
+            <span class="icon">x</span>
+            <h4 class="title">Web Design</h4>
+          </li>
+          <li class="list">
+            <span class="icon">x</span>
+            <h4 class="title">Font Design</h4>
+          </li>
+        </ul>
+        <div class="freelance">
+          <h1 class="title">I'm Available for Freelance</h1>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            labore laborum voluptatibus.
+          </p>
+          <a href="#" class="link"> Get a Quote </a>
+        </div>
+      </section>
+      <!-- <section id="portfolio"></section> -->
     </main>
     <script src="script.js"></script>
   </body>
